--- a/site/package.json
+++ b/site/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@types/chart.js": "^2.9.18",
+    "@types/chart.js": "^2.9.19",
     "angular-bootstrap-md": "^9.0.1",
     "animate.css": "^3.7.2",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
